tests/simple_tests/syntaxError/deuxPointsElif.py
if False:
	print(1)
elif True
	print(2)